--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -23,7 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
             android:fontFamily="@font/thin"
-        android:text="BM64:REV"
+        android:text="@string/main_name_of_the_greatest_game_ever"
         android:textColor="@android:color/holo_red_light"
         android:textSize="60sp" />
 
@@ -33,7 +33,7 @@
             android:layout_width="180dp"
             android:layout_height="70dp"
             android:layout_margin="10dp"
-            android:text="Играть" />
+            android:text="@string/main_menu_text_play" />
 
         <Button
             android:id="@+id/main_menu_button_settings"
@@ -41,7 +41,7 @@
             android:layout_width="180dp"
             android:layout_height="70dp"
             android:layout_margin="10dp"
-            android:text="Настройки" />
+            android:text="@string/main_menu_text_settings" />
 
         <Button
             android:id="@+id/main_menu_button_exit"
@@ -51,7 +51,7 @@
             android:layout_margin="10dp"
             android:layout_marginBottom="0dp"
             android:backgroundTint="@color/colorAccent"
-            android:text="Выход" /></LinearLayout>
+            android:text="@string/main_menu_text_exit" /></LinearLayout>
 
 
 
