--- a/app/src/main/res/layout/creation_list_fragment_recycler_item.xml
+++ b/app/src/main/res/layout/creation_list_fragment_recycler_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/creation_list_fragment_recycler_item_main_space"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
@@ -16,7 +15,8 @@
 
     <EditText
         android:id="@+id/creation_list_fragment_recycler_item_content"
-        android:layout_width="match_parent"
+        android:labelFor="@id/creation_list_fragment_recycler_item_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:inputType="textMultiLine"
         android:layout_weight="1"
@@ -32,6 +32,7 @@
         android:layout_gravity="center"
         android:visibility="invisible"
         android:background="@drawable/ic_clear_black_24dp"
-        android:backgroundTint="@color/colorPrimary"/>
+        android:backgroundTint="@color/colorPrimary"
+        android:contentDescription="@string/todo" />
 
 </LinearLayout>
