--- a/app/src/main/res/layout/notes_recyclerview_card.xml
+++ b/app/src/main/res/layout/notes_recyclerview_card.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/notes_recyclerview_card"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:minHeight="56dp"
@@ -13,7 +10,6 @@
     android:elevation="10dp">
 
     <LinearLayout
-        android:id="@+id/notes_recyclerview_header_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="56dp"
@@ -25,17 +21,16 @@
 
         <TextView
             android:id="@+id/notes_recyclerview_header"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:minHeight="56dp"
             android:layout_weight="1"
             android:gravity="center_vertical"
             android:padding="12dp"
             android:textSize="20sp"
-            android:hint="(Без названия)" />
+            android:hint="@string/no_name" />
 
         <ImageButton
-            android:id="@+id/notes_recyclerview_arrow_down"
             android:layout_width="56dp"
             android:layout_height="56dp"
             android:layout_gravity="center"
@@ -44,6 +39,7 @@
             android:foregroundGravity="center"
             android:clickable="true"
             android:focusable="true"
-            android:visibility="invisible"/>
+            android:visibility="invisible"
+            android:contentDescription="@string/todo" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
