--- a/app/src/main/res/layout/trash_fragment.xml
+++ b/app/src/main/res/layout/trash_fragment.xml
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/tasks_fragment_id"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView3"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:textSize="25pt"
-        android:text="Trash" />
+        android:textSize="25pt" />
 
 </LinearLayout>
