--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,14 +21,14 @@
             android:text="000"
             android:textSize="40sp" />
 
-        <TextView
-            android:id="@+id/timer"
+        <Chronometer
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textSize="40sp"
             android:gravity="right"
-            android:text="00:00"
-            android:textSize="40sp" />
+
+            />
     </LinearLayout>
 
     <GridLayout
